--- a/styles/components/SearchBar.module.css
+++ b/styles/components/SearchBar.module.css
@@ -1,5 +1,4 @@
 .searchBarContainer {
-    position: relative;
     width: 100%;
     text-align: center;
 }
@@ -9,6 +8,12 @@
     margin: 0 auto 1.5rem;
 
     line-height: 3rem;
+}
+
+.inputPokemonContainer {
+    width: 30rem;
+    margin: 0 auto;
+    position: relative;
 }
 
 .inputPokemonContainer>input {
@@ -27,7 +32,7 @@
 
 .inputPokemonContainer>svg {
     position: absolute;
-    left: 75px;
-    top: 85px;
+    left: 39px;
+    top: 10px;
     fill: rgba(66, 66, 66, 0.527);
 }
