--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,10 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+body {
+  background-color: rgb(243, 243, 243);
+}
+
 a {
   color: inherit;
   text-decoration: none;
