--- a/styles/components/PokemonCard.module.css
+++ b/styles/components/PokemonCard.module.css
@@ -36,39 +36,111 @@
     width: 160px;
     height: 160px;
     border-radius: 9rem;
-    background-color: rgba(238, 238, 238, 0.400);
+    background-color: var(--Transparent);
 }
 
+/* *** Pokemon Details *** */
 .pokemonDetailsContainer {
     padding: 2rem;
 }
 
 .pokemonDetailsContainer h1 {
-    color: #fff;
     font-size: 2.4rem;
     text-align: left;
+    text-shadow: 2px 2px rgba(0, 0, 0, 0.384);
+
+    color: #fff;
 }
 
 .pokemonType {
-    margin: .5rem 0 1rem;
     display: grid;
-    grid-template-columns: repeat(2, 6rem);
-    gap: .5rem;
-    /* place-items: center; */
+    grid-template-columns: repeat(2, auto);
+    gap: .3rem;
+    place-items: center;
+
+    margin: .5rem 0 1rem;
+
     text-align: center;
 }
 
-.pokemonType h1,
 .pokemonType h2 {
-    font-size: 1.1rem;
-    padding: .3rem;
-    background-color: rgba(238, 238, 238, 0.400);
-    border-radius: 10px;
+    padding: .4rem;
+
+    font-size: 1.2rem;
+
+    background-color: var(--Transparent);
+    border-radius: 15px;
     color: #fff;
 }
 
-/* Pokemon Stats Details */
+.pokemonType h2:nth-child(n) {
+    place-self: start;
+}
+
+/* *** Pokemon Stats Details *** */
 .pokemonStatsContainer {
-    background-color: #fff;
+    padding: 1.5rem 2.5rem;
+
+
+    text-align: left;
+    font-size: 1.2rem;
+
+    background-color: var(--Pokemon-Card-Stats);
     border-radius: 2rem 2rem .5rem .5rem;
+}
+
+.pokemonStatsContainer h3 {
+    margin-bottom: 1rem;
+}
+
+.pokemonStatsDetailsContainer {
+    display: flex;
+    margin: .5rem 0;
+
+    font-size: 1.3rem;
+}
+
+.pokemonStatsDetailsContainer>.statsID {
+    flex: 2;
+    color: rgb(130, 130, 130);
+}
+
+.pokemonStatsDetailsContainer>.statsAmountNumber {
+    flex: 1;
+}
+
+.statsBar {
+    flex: 3;
+    place-self: center;
+
+    width: 90%;
+    height: .4rem;
+
+    border-radius: 25px;
+
+    background-color: rgba(180, 180, 180, 0.5);
+}
+
+.statsBarFillingRed,
+.statsBarFillingGreen,
+.statsBarFillingBlue {
+    width: 70%;
+    height: 100%;
+    border-radius: inherit;
+    box-shadow: 0px 2px 3px rgba(66, 66, 66, 0.527);
+}
+
+.statsBarFillingRed {
+    width: 45%;
+    background-color: #FF1602;
+}
+
+.statsBarFillingGreen {
+    width: 60%;
+    background-color: #66923D;
+}
+
+.statsBarFillingBlue {
+    width: 48%;
+    background-color: #2226EA;
 }
