--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,9 @@
 :root {
   /* ***** Primary Colors ***** */
+  --Page-Light: rgb(243, 243, 243);
   --Main-Pokemon-Logo: #3c5aa6;
+  --Pokemon-Card-Stats: rgb(250, 250, 250);
+  --Transparent: rgba(238, 238, 238, 0.400);
 
   /* 1rem = 10px */
   font-size: 62.5%;
@@ -15,7 +18,7 @@ body {
 }
 
 body {
-  background-color: rgb(243, 243, 243);
+  background-color: var(--Page-Background-Light);
 }
 
 a {
