--- a/styles/components/PokemonCard.module.css
+++ b/styles/components/PokemonCard.module.css
@@ -1,15 +1,10 @@
 .pokemonCardContainer {
     position: relative;
     width: 90%;
-    margin: 2.5rem auto 0;
-    /* padding: 2rem; */
+    margin: 2.5rem auto;
 
     border-radius: .5rem;
 
-    /* color: var(--Main-Pokemon-Logo); */
-    /* background-color: var(--Grass); */
-    /* background: rgb(78, 130, 52); */
-    /* background: linear-gradient(360deg, rgba(78, 130, 52, 1) 0%, rgba(120, 200, 80, 1) 50%, rgba(167, 219, 141, 1) 100%); */
     box-shadow: 0px 2px 3px rgba(66, 66, 66, 0.527);
 }
 
@@ -29,12 +24,12 @@
 
 .pokemonCardContainer>svg:hover {
     fill: red;
-
 }
 
 .imageBackground img {
     width: 160px;
     height: 160px;
+
     border-radius: 9rem;
     background-color: var(--Transparent);
 }
@@ -68,8 +63,8 @@
 
     font-size: 1.2rem;
 
-    background-color: var(--Transparent);
     border-radius: 15px;
+    background-color: var(--Transparent);
     color: #fff;
 }
 
@@ -80,7 +75,6 @@
 /* *** Pokemon Stats Details *** */
 .pokemonStatsContainer {
     padding: 1.5rem 2.5rem;
-
 
     text-align: left;
     font-size: 1.2rem;
@@ -121,26 +115,22 @@
     background-color: rgba(180, 180, 180, 0.5);
 }
 
-.statsBarFillingRed,
-.statsBarFillingGreen,
-.statsBarFillingBlue {
-    width: 70%;
+.statsBarFilling,
+.statsBarFilling,
+.statsBarFilling {
+    position: relative;
+
+    max-width: 100%;
     height: 100%;
+
     border-radius: inherit;
     box-shadow: 0px 2px 3px rgba(66, 66, 66, 0.527);
 }
 
-.statsBarFillingRed {
-    width: 45%;
-    background-color: #FF1602;
-}
-
-.statsBarFillingGreen {
-    width: 60%;
-    background-color: #66923D;
-}
-
-.statsBarFillingBlue {
-    width: 48%;
-    background-color: #2226EA;
+.statsBarFilling>p,
+.statsBarFilling>p,
+.statsBarFilling>p {
+    position: absolute;
+    top: -7.5px;
+    right: -10px;
 }
