--- a/styles/components/SearchBar.module.css
+++ b/styles/components/SearchBar.module.css
@@ -19,7 +19,7 @@
 .inputPokemonContainer>input {
     width: 24.5rem;
     padding: 1.2rem;
-    margin: 0 auto;
+    margin: 0 auto 1.5rem;
 
     font-size: 1.6rem;
     padding-left: 4rem;
