--- a/styles/components/PokemonCard.module.css
+++ b/styles/components/PokemonCard.module.css
@@ -47,19 +47,21 @@
     color: #fff;
 }
 
-.pokemonType {
+.pokemonTypeContainer {
     display: grid;
-    grid-template-columns: repeat(2, auto);
-    gap: .3rem;
+    grid-template-columns: repeat(2, .1fr);
+    gap: .5rem;
     place-items: center;
+}
 
+.pokemonType {
     margin: .5rem 0 1rem;
 
     text-align: center;
 }
 
 .pokemonType h2 {
-    padding: .4rem;
+    padding: .4rem 1rem;
 
     font-size: 1.2rem;
 
